# sentinel2-cloud-detector

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: help-support.md
.github/workflows/: ci_action.yml
examples/: plotting_utils.py
s2cloudless/: PixelClassifier.py  S2PixelCloudDetector.py  __init__.py  cloud_detector.py  pixel_classifier.py  sentinelhub_masking.py  test_cloud_detector.py  utils.py
tests/: test_all.py  test_cloud_detector.py  test_pixel_classifier.py  test_sentinelhub_masking.py  test_utils.py
